--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,7 @@
 .navbar {
+    display: flex; 
+    justify-content: end;
     width: 100%;
     background: #000000e0;
-    height: 60px;
+    height: 80px;
 }
