--- a/src/components/AddUser/AddUser.css
+++ b/src/components/AddUser/AddUser.css
@@ -4,19 +4,16 @@
     align-items: center;
 }
 .addingContent button{
-    height: 80px;
-    width: 60px;
+    height: 50%;
+    width: 50px;
     border: 0 solid;
     cursor: pointer;
-    background: #94C3FF;
-    color: rgb(35, 35, 35);
-    border-radius: 5px 0px 0px 5px;
+    background: #22bd93;
+    border-radius: 5px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .addingContent button:active {
-    background: #2a2a2a;
-    color: rgb(227, 227, 227);
-    border-radius: 5px 0px 0px 5px;
+    background: #73f0c8;
     font-size: 16px;    
 }
