--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex; 
-    justify-content: end;
+    justify-content: center;
     width: 100%;
     background: #000000e0;
     height: 80px;
