--- a/src/components/UserFilter/UserFilter.css
+++ b/src/components/UserFilter/UserFilter.css
@@ -1,17 +1,28 @@
 .filterWrapper {
+    position: relative;
     display: flex;
     align-items: center;
 }
 
 .filterWrapper > input {
-    height: 30px;
-    width: 250px;
-    border-radius: 5px;
+    height: 35px;
+    width: 300px;
+    border-radius: 8px;
     padding: 0px 10px;
     border: 0 solid;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+}
+
+.iconWrapper {
+    position: absolute;
+    right: 0;
+    padding: 2px;
+    margin-right: 10px;
+    background: white;
+    opacity: 50%;
 }
 
 .filterWrapper > input:focus {
-    width: 270px;
+    width: 320px;
 }
