--- a/src/components/Filter/UserFilter.css
+++ b/src/components/Filter/UserFilter.css
@@ -7,7 +7,7 @@
 .filterWrapper > input {
     height: 35px;
     width: 300px;
-    border-radius: 8px;
+    border-radius: 8px 0 0 8px;
     padding: 0px 10px;
     border: 0 solid;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
