--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .navbar {
     display: flex; 
     justify-content: center;
+    align-items: center;
     width: 100%;
     background: #000000e0;
     height: 80px;
