--- a/src/components/AddUser/AddUser.css
+++ b/src/components/AddUser/AddUser.css
@@ -4,8 +4,8 @@
     align-items: center;
 }
 .addingContent button{
-    height: 50%;
-    width: 50px;
+    height: 40px;
+    width: 60px;
     border: 0 solid;
     cursor: pointer;
     background: #22bd93;
