--- a/src/assets/ui/Checkbox/Checkbox.css
+++ b/src/assets/ui/Checkbox/Checkbox.css
@@ -13,10 +13,9 @@
 .checkboxContainerFalse::after {
     content: "";
     width: 30px;
-    z-index: 1;
     border-radius: 15px 0 0 15px;
-    border: 0.1px solid #e6e6e6;
-    background: rgba(255, 255, 255, 0.431);
+    border: 0.1px solid #d9d9d995;
+    background: rgb(255, 255, 255);
 }
 
 
@@ -28,9 +27,8 @@
 
 .checkboxContainerTrue::after {
     content: "";
-    background: #24bd9497;
+    background: #24BD93;
     width: 30px;
-    z-index: 1;
     border-radius: 15px 0 0 15px;
     border: 0.1px solid rgba(121, 121, 121, 0);
 }
